--- a/app/src/main/res/layout/activity_search_medicine.xml
+++ b/app/src/main/res/layout/activity_search_medicine.xml
@@ -179,7 +179,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
                 android:padding="16dp"
-                android:text="Gosol"
+                android:text="Paykhana"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
