--- a/app/src/main/res/layout/activity_search_medicine.xml
+++ b/app/src/main/res/layout/activity_search_medicine.xml
@@ -270,7 +270,7 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <ListView
+        <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/listview_product"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
