Full app changed

--- a/app/src/main/res/layout/activity_search_medicine.xml
+++ b/app/src/main/res/layout/activity_search_medicine.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:background="@color/grey"
     tools:context=".SearchMedicineActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -13,7 +15,7 @@
 
 
         <TextView
-            android:id="@+id/textView2"
+            android:id="@+id/searchmedicinetv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:padding="16dp"
@@ -21,6 +23,8 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textSize="20sp"
+            android:background="@color/grey"
+            android:drawableLeft="@drawable/baseline_search_24"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,18 +32,20 @@
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_width="0dp"
+            android:background="@color/white"
+            android:layout_height="wrap_content"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView2">
+            app:layout_constraintTop_toBottomOf="@+id/searchmedicinetv">
 
             <TextView
                 android:id="@+id/idgosoltv"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:padding="16dp"
                 android:text="গোসল"
                 android:textColor="@color/black"
@@ -272,14 +278,12 @@
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/listview_product"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:divider="#d1d1d1"
-            android:dividerHeight="10dp"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
-</ScrollView>
+</LinearLayout>
