--- a/app/src/main/res/layout/activity_physiology.xml
+++ b/app/src/main/res/layout/activity_physiology.xml
@@ -4,6 +4,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/grey"
     tools:context=".PhysiologyActivity">
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/physiologyRv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
