--- a/app/src/main/res/layout/item_listview.xml
+++ b/app/src/main/res/layout/item_listview.xml
@@ -2,35 +2,40 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="#FFFFFF"
+    android:background="@drawable/circularbordersolid"
     android:orientation="vertical"
-    android:paddingBottom="5dp"
+    android:paddingBottom="8dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
-    android:paddingTop="5dp">
+    android:layout_marginTop="6dp"
+    android:layout_marginLeft="4dp"
+    android:layout_marginRight="4dp"
+    android:paddingTop="8dp">
 
     <TextView
         android:id="@+id/tv_product_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Name"
-        android:textColor="#4bb6d6"
-        android:textSize="20dp" />
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        android:textSize="16dp" />
 
     <TextView
         android:id="@+id/tv_product_price"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="100 $"
-        android:textColor="#b30000"
-        android:textSize="18dp" />
+        android:textColor="@color/black"
+        android:textSize="14dp" />
 
     <TextView
         android:id="@+id/tv_product_description"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Description"
-        android:textSize="16dp"
-        android:textStyle="italic" />
+        android:textSize="14dp"
+        android:textColor="@color/black"
+        android:textStyle="normal" />
 
 </LinearLayout>
