--- a/app/src/main/res/layout/list_item.xml
+++ b/app/src/main/res/layout/list_item.xml
@@ -39,9 +39,12 @@
                 android:textStyle="bold" />
 
             <TextView
+                android:id="@+id/iddescription"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="3dp"
+                android:maxLines="2"
+                android:ellipsize="end"
                 android:fontFamily="@font/proximanovaregular"
                 android:text="by Hasibul Asad"
                 android:textSize="12sp" />
